dex/ingress.yml
# kubectl annotate service -nkeycloak keycloak konghq.com/protocol=https
# Append annotation to svc
# Upstream / Backend protocol
# annotations:
#   konghq.com/protocol: "https"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex-kong-ingress
  namespace: dex2
  labels:
    app.kubernetes.io/name: dex
  annotations:
    # User Facing Redirect from http to https
    konghq.com/protocols: "https"
    konghq.com/strip-path: "false"
   #konghq.com/preserve-host: "true"
    kubernetes.io/ingress.class: "kong"
   #ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - dex.kongeelabs.home.arpa
      secretName: dex-tls
  rules:
  - host: dex.kongeelabs.home.arpa
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dex
            port:
              name: dex
